fix: allow java 17 module access for spark tests